...
              crossAxisAlignment: .start,
              children: [
                Row(
                  children: [
                    CustomBackButton(),
                    Text(
                      "Review your booking",
                      style: AppTextStyles(context).secondaryRegular,
                    ),
                  ],
                ),
                SizedBox(height: 26),
                VendorContainer(
...
                        width: 20,
                      ),
                      SizedBox(width: 12),
                      Column(
                        crossAxisAlignment: .start,
                        children: [
                          Text("Total Price"),
                          Text(
                            "Fees for $totalGuests passes",
                            style: AppTextStyles(context).captionRegular
                                .copyWith(color: AppColors.textSecondary),
                          ),
                        ],
...
              height: 50,
              fit: BoxFit.cover,
            )
          : Text(
              widget.isApprovalRequired
                  ? "Submit Request"
                  : "Proceed to Payment",
            ),
    );
  }
}

