...
import 'package:smooth_corner/smooth_corner.dart';

class PrimaryButton extends StatefulWidget {
  const PrimaryButton({
    super.key,
    required this.onTap,
    this.title = "Continue",
    this.bgColor = AppColors.buttonPrimary,
    this.frColor = AppColors.textInverse,
    this.nullbgColor = AppColors.buttonPrimaryDisabled,
    this.nullfrColor = AppColors.buttonTextDisabled,
  });

...
